Readme updated for exocad GmbH

--- a/README
+++ b/README
@@ -27,3 +27,4 @@ We hope you enjoy it,
 
 /The Trac Team
 
+WARNING: This repository contains modifications for exocad GmbH and is NOT the original trac !
